# ChangeLog for net-libs/openslp
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/openslp/ChangeLog,v 1.22 2004/07/01 22:27:21 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  openslp-1.0.11.ebuild, openslp-1.0.9a.ebuild:
  virtual/glibc -> virtual/libc

  12 Jun 2004; Tom Gall <tgall@gentoo.org> openslp-1.0.11.ebuild:
  stable on ppc64 bug #53766

  11 May 2004; Michael McCabe <randy@gentoo.org> openslp-1.0.11.ebuild:
  Added s390 keywords

  21 Mar 2004; Joshua Kinard <kumba@gentoo.org> openslp-1.0.11.ebuild,
  openslp-1.0.9a.ebuild:
  Marked stable on mips.

  27 Feb 2004; Joshua Kinard <kumba@gentoo.org> openslp-1.0.11.ebuild:
  Added ~mips to KEYWORDS to satisfy repoman deps.

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> openslp-1.0.11.ebuild:
  stable on alpha

  26 Jan 2004; <gustavoz@gentoo.org> openslp-1.0.11.ebuild:
  stable on sparc

  23 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org> openslp-1.0.11.ebuild:
  set ppc in keywords

  03 Jul 2003; Nick Hadaway <raker@gentoo.org> openslp-1.0.11.ebuild:
  Marked stable for x86

*openslp-1.0.11 (26 Mar 2003)

  25 Jul 2003; Guy Martin <gmsoft@gentoo.org> openslp-1.0.11.ebuild :
  Marked stable on hppa.

  26 Mar 2003; Alastair Tse <liquidx@gentoo.org> openslp-1.0.11.ebuild:
  version bumpage

  19 Mar 2003; Guy Martin <gmsoft@gentoo.org> openslp-1.0.9a.ebuild :
  Added hppa to keywords.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*openslp-1.0.9a (2 Nov 2002) 

  02 Nov 2003; Bart Verwilst <verwilst@gentoo.org>

  New version, + fixed license

*openslp-1.0.8a (27 Apr 2002)

  25 Oct 2002; Donny Davies <woodchip@gentoo.org> slpd-init :
  Created an initscript; as requested in #9256.

  19 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> openslp-1.0.8a.ebuild :
  Added ppc to KEYWORDS.

  27 Apr 2002; Seemant Kulleen <seemant@gentoo.org> openslp-1.0.8a.ebuild