@@ -1,6 +1,9 @@
+MD5 bcd142143f42db6ca292659f34d89f6c ChangeLog 2551
 MD5 96b3bd5d4051e86cacd75429cf2e5c33 openslp-1.0.11.ebuild 834
 MD5 88529efa74cf6741be440a4912dc104f openslp-1.0.9a.ebuild 696
-MD5 bcd142143f42db6ca292659f34d89f6c ChangeLog 2551
-MD5 f87ab978aa65541b72c9aef6e1e5677e files/slpd-init 2294
+MD5 40e4820327e2b0f6c84bfc13a08751eb openslp-1.2.1.ebuild 927
 MD5 570fc57cfed48b272c0d000a21927d26 files/digest-openslp-1.0.11 66
 MD5 67fd195194d45cffe4a08f4d0d0c5c2f files/digest-openslp-1.0.9a 66
+MD5 f87ab978aa65541b72c9aef6e1e5677e files/slpd-init 2294
+MD5 4d65bafa304559ac903e053d39638152 files/digest-openslp-1.2.0 65
+MD5 97a5b3202b42cbb36942b17299b2701d files/digest-openslp-1.2.1 65
