@@ -1,0 +1,1 @@
+MD5 ff9999d1b44017281dd00ed2c4d32330 openslp-1.2.1.tar.gz 886195
