@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/openslp
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/openslp/ChangeLog,v 1.22 2004/07/01 22:27:21 eradicator Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/openslp/ChangeLog,v 1.23 2005/03/16 09:38:10 liquidx Exp $
+
+*openslp-1.2.1 (16 Mar 2005)
+
+  16 Mar 2005; Alastair Tse <liquidx@gentoo.org> +openslp-1.2.1.ebuild:
+  version bump. security vunerability fix (SUSE-SA:2005:015) (#85347)
 
   01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
   openslp-1.0.11.ebuild, openslp-1.0.9a.ebuild:
